[package]
name = "chatterverse_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
config = {version = "0.13", default-features = false, features = ["yaml"]}
serde = "1.0.185"
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json", "registry"]}
